fixed a problem where the horizontal scrollbar appeared because the page was too wide

--- a/src/app/auction/[id]/component.module.scss
+++ b/src/app/auction/[id]/component.module.scss
@@ -1,6 +1,6 @@
 .objectPage {
     color:auto;
-    width:100vw;
+    width:100%;
     margin: auto;
     margin-block:5%;
     align-items:center;
@@ -9,7 +9,7 @@
 .objectHeading {
     font-size:xx-large;
     text-align: center;
-    width:100vw;
+    width:100%;
 }
 .committeeHeading {
     display:flex;
